--- a/ProjectGenesis.csproj
+++ b/ProjectGenesis.csproj
@@ -55,6 +55,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>lib\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="MoreMegaStructure">
+      <HintPath>lib\MoreMegaStructure.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib">
       <HintPath>$(DSPAssemblyPath)mscorlib.dll</HintPath>
     </Reference>
@@ -100,7 +103,108 @@
     <PackageReference Include="DysonSphereProgram.Modding.NebulaMultiplayerModApi" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\**\*.cs" />
+    <Compile Include="src\Compatibility\BlueprintTweaks.cs" />
+    <Compile Include="src\Compatibility\Bottleneck.cs" />
+    <Compile Include="src\Compatibility\FastTravelEnabler.cs" />
+    <Compile Include="src\Compatibility\GalacticScale.cs" />
+    <Compile Include="src\Compatibility\GigaStationsUpdated.cs" />
+    <Compile Include="src\Compatibility\InstallationCheckPlugin.cs" />
+    <Compile Include="src\Compatibility\LazyOutposting.cs" />
+    <Compile Include="src\Compatibility\MoreMegaStructure.cs" />
+    <Compile Include="src\Compatibility\PlanetVeinUtilization.cs" />
+    <Compile Include="src\Compatibility\PlanetwideMining.cs" />
+    <Compile Include="src\Compatibility\WeaponPlus.cs" />
+    <Compile Include="src\Patches\Logic\AbnormalityLogicPatches.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\AddEffectEmitterProto.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\AddVeinPatches.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\ModifyPlanetTheme.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\StellarStationBanMagma.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\SwapShaderPatches.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\ThemeDatas.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\UIDetailPatches.cs" />
+    <Compile Include="src\Patches\Logic\AddVein\VeinAnimDataPatches.cs" />
+    <Compile Include="src\Patches\Logic\BattleRelated\HPAdjust.cs" />
+    <Compile Include="src\Patches\Logic\BattleRelated\InfiniteReloadAmmo.cs" />
+    <Compile Include="src\Patches\Logic\BattleRelated\LocalPlasmaBanAntimatter.cs" />
+    <Compile Include="src\Patches\Logic\CurvatureLogistics\CurvatureLogistics.cs" />
+    <Compile Include="src\Patches\Logic\DisableLDBToolCachePatches.cs" />
+    <Compile Include="src\Patches\Logic\DysonSpherePatches.cs" />
+    <Compile Include="src\Patches\Logic\FastStartOptionPatches.cs" />
+    <Compile Include="src\Patches\Logic\FastTravelPatches.cs" />
+    <Compile Include="src\Patches\Logic\FelTreeObjects.cs" />
+    <Compile Include="src\Patches\Logic\FuelRodPatches.cs" />
+    <Compile Include="src\Patches\Logic\GeothermalStrengthPatches.cs" />
+    <Compile Include="src\Patches\Logic\GlobalPowerSupplyPatches.cs" />
+    <Compile Include="src\Patches\Logic\InitialTechPatches.cs" />
+    <Compile Include="src\Patches\Logic\InserterComponentPatches.cs" />
+    <Compile Include="src\Patches\Logic\LogisticsInterchangePatches.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\InternalFunctions.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\MegaAssemblerPatches.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\NebulaCompat.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\PrebuildParametersPatches.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\SetFilterPatches.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\UIRecipePickerPatches.cs" />
+    <Compile Include="src\Patches\Logic\MegaAssembler\UISlotPickerPatches.cs" />
+    <Compile Include="src\Patches\Logic\ModelLoadingPatches.cs" />
+    <Compile Include="src\Patches\Logic\ModifyUpgradeTech\AddUpgradeTech.cs" />
+    <Compile Include="src\Patches\Logic\ModifyUpgradeTech\ModifyUpgradeTech.cs" />
+    <Compile Include="src\Patches\Logic\OverWriteBirthGalaxy.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\DarkFrogPatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\DronePatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\FactoryPowerPatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\InternalFunctions.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\LabPatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\MinerPatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\PlanetFocusPatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetFocus\PowerSystemPatches.cs" />
+    <Compile Include="src\Patches\Logic\PlanetGasPatches.cs" />
+    <Compile Include="src\Patches\Logic\PowerGeneratorEnergyCapPatches.cs" />
+    <Compile Include="src\Patches\Logic\ProductOverflowPatches.cs" />
+    <Compile Include="src\Patches\Logic\QuantumStorage\InternalFunctions.cs" />
+    <Compile Include="src\Patches\Logic\QuantumStorage\QuantumStoragePatches.cs" />
+    <Compile Include="src\Patches\Logic\QuantumStorage\UIPatches.cs" />
+    <Compile Include="src\Patches\Logic\SpaceMissilePatches.cs" />
+    <Compile Include="src\Patches\Logic\StationOutputPatches.cs" />
+    <Compile Include="src\Patches\Logic\TankComponentPatches.cs" />
+    <Compile Include="src\Patches\Logic\VFPreloadPatches.cs" />
+    <Compile Include="src\Patches\UI\AdvancedLaserPatches.cs" />
+    <Compile Include="src\Patches\UI\BeltColorFix\BeltFixPatches.cs" />
+    <Compile Include="src\Patches\UI\ChemicalRecipeFcolPatches.cs" />
+    <Compile Include="src\Patches\UI\DisplayText\DisplayNamePatches.cs" />
+    <Compile Include="src\Patches\UI\DisplayText\DisplayTextPatches.cs" />
+    <Compile Include="src\Patches\UI\FactoryModelPatches.cs" />
+    <Compile Include="src\Patches\UI\FluidColorPatches.cs" />
+    <Compile Include="src\Patches\UI\FuelRodPatches.cs" />
+    <Compile Include="src\Patches\UI\GridIndexExpandPatches.cs" />
+    <Compile Include="src\Patches\UI\HarmonyLogPatches.cs" />
+    <Compile Include="src\Patches\UI\IconSetPatches.cs" />
+    <Compile Include="src\Patches\UI\MultiProductionPatches.cs" />
+    <Compile Include="src\Patches\UI\PlanetFocus\UIPlanetDetailExpand.cs" />
+    <Compile Include="src\Patches\UI\PlanetFocus\UIPlanetFocusWindow.cs" />
+    <Compile Include="src\Patches\UI\ResearchLabPatches.cs" />
+    <Compile Include="src\Patches\UI\UIBuildMenuPatches.cs" />
+    <Compile Include="src\Patches\UI\UILootFilterPatches.cs" />
+    <Compile Include="src\Patches\UI\UIMainMenuPatches.cs" />
+    <Compile Include="src\Patches\UI\UIMonitorPatches.cs" />
+    <Compile Include="src\Patches\UI\UIOptionWindowPatches.cs" />
+    <Compile Include="src\Patches\UI\UIPowerGeneratorWindowPatches.cs" />
+    <Compile Include="src\Patches\UI\UISignalPickerPatches.cs" />
+    <Compile Include="src\Patches\UI\UITechNodePatches.cs" />
+    <Compile Include="src\Patches\UI\UpdateLogoPatches.cs" />
+    <Compile Include="src\Patches\UI\Utils\MyWindowCtl.cs" />
+    <Compile Include="src\Patches\UI\Utils\Util.cs" />
+    <Compile Include="src\ProjectGenesis.cs" />
+    <Compile Include="src\Utils\CopyModelUtils.cs" />
+    <Compile Include="src\Utils\DictionaryExtend.cs" />
+    <Compile Include="src\Utils\ERecipeType.cs" />
+    <Compile Include="src\Utils\IconDescUtils.cs" />
+    <Compile Include="src\Utils\JsonDataUtils.cs" />
+    <Compile Include="src\Utils\JsonHelper.cs" />
+    <Compile Include="src\Utils\KvpDeconstruct.cs" />
+    <Compile Include="src\Utils\MutliPlayerPacket.cs" />
+    <Compile Include="src\Utils\ProtoID.cs" />
+    <Compile Include="src\Utils\TranslateUtils.cs" />
+    <Compile Include="src\Utils\TranspilerLogUtils.cs" />
     <EmbeddedResource Include="data\*.json" />
     <None Include="assets\*" />
     <None Include="lib\*" />
