--- a/ProjectGenesis.csproj
+++ b/ProjectGenesis.csproj
@@ -128,6 +128,7 @@
     <Compile Include="src\Patches\Logic\BattleRelated\HPAdjust.cs" />
     <Compile Include="src\Patches\Logic\BattleRelated\InfiniteReloadAmmo.cs" />
     <Compile Include="src\Patches\Logic\BattleRelated\LocalPlasmaBanAntimatter.cs" />
+    <Compile Include="src\Patches\Logic\Build\BuildingModelIndexRecord.cs" />
     <Compile Include="src\Patches\Logic\CurvatureLogistics\CurvatureLogistics.cs" />
     <Compile Include="src\Patches\Logic\DisableLDBToolCachePatches.cs" />
     <Compile Include="src\Patches\Logic\DysonSpherePatches.cs" />
@@ -168,7 +169,9 @@
     <Compile Include="src\Patches\Logic\QuantumStorage\InternalFunctions.cs" />
     <Compile Include="src\Patches\Logic\QuantumStorage\QuantumStoragePatches.cs" />
     <Compile Include="src\Patches\Logic\QuantumStorage\UIPatches.cs" />
+    <Compile Include="src\Patches\Logic\SatellitePowerDistributionPatch.cs" />
     <Compile Include="src\Patches\Logic\SpaceMissilePatches.cs" />
+    <Compile Include="src\Patches\Logic\StarGate.cs" />
     <Compile Include="src\Patches\Logic\StationOutputPatches.cs" />
     <Compile Include="src\Patches\Logic\TankComponentPatches.cs" />
     <Compile Include="src\Patches\Logic\VFPreloadPatches.cs" />
