--- a/packer/ProjectOrbitalRing.Packer.csproj
+++ b/packer/ProjectOrbitalRing.Packer.csproj
@@ -35,9 +35,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Newtonsoft.Json">
-            <HintPath>..\lib\Newtonsoft.Json.dll</HintPath>
-        </Reference>
+        <PackageReference Include="Newtonsoft.Json">
+            <Version>13.0.4</Version>
+        </PackageReference>
         <Reference Include="System"/>
         <Reference Include="System.Core"/>
         <Reference Include="System.Data"/>
