--- a/packer/ProjectOrbitalRing.Packer.csproj
+++ b/packer/ProjectOrbitalRing.Packer.csproj
@@ -35,9 +35,6 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json">
-            <Version>13.0.4</Version>
-        </PackageReference>
         <Reference Include="System"/>
         <Reference Include="System.Core"/>
         <Reference Include="System.Data"/>
@@ -47,6 +44,9 @@
         </Reference>
         <Reference Include="System.IO.Compression.FileSystem">
             <HintPath>$(DSPAssemblyPath)System.IO.Compression.FileSystem.dll</HintPath>
+        </Reference>
+        <Reference Include="Newtonsoft.Json">
+            <HintPath>lib\Newtonsoft.Json.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
