--- a/ProjectOrbitalRing.csproj
+++ b/ProjectOrbitalRing.csproj
@@ -219,6 +219,7 @@
     <Compile Include="src\Utils\KvpDeconstruct.cs" />
     <Compile Include="src\Utils\MutliPlayerPacket.cs" />
     <Compile Include="src\Utils\ProtoID.cs" />
+    <Compile Include="src\Utils\RandomUtils.cs" />
     <Compile Include="src\Utils\TranslateUtils.cs" />
     <Compile Include="src\Utils\TranspilerLogUtils.cs" />
     <EmbeddedResource Include="data\*.json" />
